{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 39,
  "lineage": "46c70a41-3471-9450-e0ea-6e2501923e79",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "dagility_sandbox_elasticip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0865930f1fdbad2f7",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-0865930f1fdbad2f7",
            "association_id": "eipassoc-0c3a3c13a5570ecd0",
            "domain": "vpc",
            "id": "eipalloc-0865930f1fdbad2f7",
            "network_border_group": "us-east-1",
            "network_interface": "eni-01f0635e2b51950b1",
            "private_dns": "ip-10-97-0-19.ec2.internal",
            "private_ip": "10.97.0.19",
            "public_dns": "ec2-54-166-16-142.compute-1.amazonaws.com",
            "public_ip": "54.166.16.142",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "DAgility-Sandbox-ElasticIP"
            },
            "tags_all": {
              "Name": "DAgility-Sandbox-ElasticIP"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip_52_1_62_207",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-049ba790d7874815d",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-049ba790d7874815d",
            "association_id": "eipassoc-060d0ea256396b987",
            "domain": "vpc",
            "id": "eipalloc-049ba790d7874815d",
            "instance": "i-0872e6dad268d354b",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0fc85802d1d64dc7f",
            "private_dns": "ip-172-31-16-129.ec2.internal",
            "private_ip": "172.31.16.129",
            "public_dns": "ec2-52-1-62-207.compute-1.amazonaws.com",
            "public_ip": "52.1.62.207",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gitlift_vpc_us_east_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e5d2c3e1f67e6c3",
            "arn": "arn:aws:ec2:us-east-1::elastic-ip/eipalloc-03e5d2c3e1f67e6c3",
            "association_id": "eipassoc-0d809060d969a73e2",
            "domain": "vpc",
            "id": "eipalloc-03e5d2c3e1f67e6c3",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07f47ce1e04c1bac6",
            "private_dns": "ip-10-0-101-172.ec2.internal",
            "private_ip": "10.0.101.172",
            "public_dns": "ec2-3-225-52-214.compute-1.amazonaws.com",
            "public_ip": "3.225.52.214",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Environment": "test",
              "Name": "gitlift-vpc-us-east-1a"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "gitlift-vpc-us-east-1a"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s_elb_a23d809284012406dbf2d546877c63c2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682452625784:security-group/sg-0d555036faf8be760",
            "description": "Security group for Kubernetes ELB a23d809284012406dbf2d546877c63c2 (default/spring-petclinic)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d555036faf8be760",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 4
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "k8s-elb-a23d809284012406dbf2d546877c63c2",
            "name_prefix": "k8s-elb-a23d80",
            "owner_id": "682452625784",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {
              "kubernetes.io/cluster/QDB-EKS": "owned"
            },
            "tags_all": {
              "kubernetes.io/cluster/QDB-EKS": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b85286a4dd4a9182"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "",
            "id": "sg-0d555036faf8be760",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_group_for_inbound_nfs_d_7usl1uldoie5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682452625784:security-group/sg-0d55f1b2aeadbbfd4",
            "description": "[DO NOT DELETE] Security Group that allows inbound NFS traffic for SageMaker Notebooks Domain [d-7usl1uldoie5]",
            "egress": [],
            "id": "sg-0d55f1b2aeadbbfd4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 2049,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0feb336eb2acd5a15"
                ],
                "self": false,
                "to_port": 2049
              }
            ],
            "name": "security-group-for-inbound-nfs-d-7usl1uldoie5",
            "name_prefix": "",
            "owner_id": "682452625784",
            "region": "us-east-1",
            "revoke_rules_on_delete": null,
            "tags": {
              "ManagedByAmazonSageMakerResource": "arn:aws:sagemaker:us-east-1:682452625784:domain/d-7usl1uldoie5"
            },
            "tags_all": {
              "ManagedByAmazonSageMakerResource": "arn:aws:sagemaker:us-east-1:682452625784:domain/d-7usl1uldoie5"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cfc064"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "",
            "id": "sg-0d55f1b2aeadbbfd4",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_secure_private_us_east_1c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682452625784:subnet/subnet-0072f28e096968468",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.20.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0072f28e096968468",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "682452625784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "eks-secure_private_us-east-1c",
              "kubernetes.io/cluster/eks-secure": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "eks-secure_private_us-east-1c",
              "kubernetes.io/cluster/eks-secure": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0e4d2c5a50cb2a7e5"
          },
          "identity_schema_version": 0,
          "identity": {
            "id": "subnet-0072f28e096968468",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gitlift_vpc_public_us_east_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682452625784:subnet/subnet-0009a7dea825d5c56",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0009a7dea825d5c56",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "682452625784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "test",
              "Name": "gitlift-vpc-public-us-east-1a"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "gitlift-vpc-public-us-east-1a"
            },
            "vpc_id": "vpc-056321eca2c91f864"
          },
          "identity_schema_version": 0,
          "identity": {
            "id": "subnet-0009a7dea825d5c56",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "gitlift_vpc_public_us_east_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682452625784:subnet/subnet-00e6c575cde4b2e30",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00e6c575cde4b2e30",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "682452625784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "test",
              "Name": "gitlift-vpc-public-us-east-1b"
            },
            "tags_all": {
              "Environment": "test",
              "Name": "gitlift-vpc-public-us-east-1b"
            },
            "vpc_id": "vpc-056321eca2c91f864"
          },
          "identity_schema_version": 0,
          "identity": {
            "id": "subnet-00e6c575cde4b2e30",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "testing_subnet_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682452625784:subnet/subnet-00570a625ff4fe6eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.100.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00570a625ff4fe6eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "682452625784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "Testing subnet private 1",
              "SubnetType": "Public",
              "kubernetes.io/cluster/kops.test.dagility.com": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "Testing subnet private 1",
              "SubnetType": "Public",
              "kubernetes.io/cluster/kops.test.dagility.com": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-015a692d2d648bdd9"
          },
          "identity_schema_version": 0,
          "identity": {
            "id": "subnet-00570a625ff4fe6eb",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682452625784:vpc/vpc-03cfc064",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-985898fe",
            "default_route_table_id": "rtb-d7a3d6b1",
            "default_security_group_id": "sg-9d6079e7",
            "dhcp_options_id": "dopt-93ead6f7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03cfc064",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-d7a3d6b1",
            "owner_id": "682452625784",
            "region": "us-east-1",
            "tags": {
              "Name": "Default VPC"
            },
            "tags_all": {
              "Name": "Default VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "id": "vpc-03cfc064",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "testing_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682452625784:vpc/vpc-015a692d2d648bdd9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.100.0.0/16",
            "default_network_acl_id": "acl-079fdc078e4969842",
            "default_route_table_id": "rtb-0a32af29a7415150c",
            "default_security_group_id": "sg-016113ba6a987e315",
            "dhcp_options_id": "dopt-93ead6f7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-015a692d2d648bdd9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a32af29a7415150c",
            "owner_id": "682452625784",
            "region": "us-east-1",
            "tags": {
              "Name": "Testing VPC"
            },
            "tags_all": {
              "Name": "Testing VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "id": "vpc-015a692d2d648bdd9",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_new1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:682452625784:vpc/vpc-008bf35e6c9a1ef4a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.53.0.0/16",
            "default_network_acl_id": "acl-089a4a8d806cb434a",
            "default_route_table_id": "rtb-04dfb7d8ce13a75aa",
            "default_security_group_id": "sg-0701ecb2f3d5aff45",
            "dhcp_options_id": "dopt-93ead6f7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-008bf35e6c9a1ef4a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04dfb7d8ce13a75aa",
            "owner_id": "682452625784",
            "region": "us-east-1",
            "tags": {
              "McmEnvBy": "MCM_PROD",
              "McmID": "UST6_AWS_PRV_10002",
              "Name": "VPC-NEW1",
              "mcm-cc": "6ec50e563ba64c9bb21df34fd65152c0",
              "mcm-d": "7ea2ad33908c422eae4d52f878207300",
              "mcm-p": "276a38a89c6c4707ae2313a68467ffa1",
              "mcm-u": "bde6f4dd71e34d95b397be2271a5c744"
            },
            "tags_all": {
              "McmEnvBy": "MCM_PROD",
              "McmID": "UST6_AWS_PRV_10002",
              "Name": "VPC-NEW1",
              "mcm-cc": "6ec50e563ba64c9bb21df34fd65152c0",
              "mcm-d": "7ea2ad33908c422eae4d52f878207300",
              "mcm-p": "276a38a89c6c4707ae2313a68467ffa1",
              "mcm-u": "bde6f4dd71e34d95b397be2271a5c744"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "id": "vpc-008bf35e6c9a1ef4a",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}